k8s-configuration/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: acme
spec:
  selector:
    app: demo-pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
