k8s-configuration/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: acme
  annotations:
    networking.gke.io/managed-certificates: demo-certificates

spec:
  rules:
    - host: demo.forest-coder.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  demo-service
                port:
                  number: 80
